--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction to `cf_xarray`\n",
     "\n",
-    "This notebook is a brief introduction to `cf_xarray`'s current capabilities."
+    "This notebook is a brief introduction to `cf_xarray`'s current capabilities.\n"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets read two datasets."
+    "Lets read two datasets.\n"
    ]
   },
   {
@@ -52,7 +52,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This one is inspired by POP model output and illustrates how the coordinates attribute is interpreted"
+    "This one is inspired by POP model output and illustrates how the coordinates\n",
+    "attribute is interpreted\n"
    ]
   },
   {
@@ -67,10 +68,26 @@
    "outputs": [],
    "source": [
     "pop = xr.Dataset()\n",
-    "pop.coords[\"TLONG\"] = ((\"nlat\", \"nlon\"), np.ones((20, 30)), {\"units\": \"degrees_east\"})\n",
-    "pop.coords[\"TLAT\"] = ((\"nlat\", \"nlon\"), 2 * np.ones((20, 30)), {\"units\": \"degrees_north\"})\n",
-    "pop.coords[\"ULONG\"] = ((\"nlat\", \"nlon\"), 0.5 * np.ones((20, 30)), {\"units\": \"degrees_east\"})\n",
-    "pop.coords[\"ULAT\"] = ((\"nlat\", \"nlon\"), 2.5 * np.ones((20, 30)), {\"units\": \"degrees_north\"})\n",
+    "pop.coords[\"TLONG\"] = (\n",
+    "    (\"nlat\", \"nlon\"),\n",
+    "    np.ones((20, 30)),\n",
+    "    {\"units\": \"degrees_east\"},\n",
+    ")\n",
+    "pop.coords[\"TLAT\"] = (\n",
+    "    (\"nlat\", \"nlon\"),\n",
+    "    2 * np.ones((20, 30)),\n",
+    "    {\"units\": \"degrees_north\"},\n",
+    ")\n",
+    "pop.coords[\"ULONG\"] = (\n",
+    "    (\"nlat\", \"nlon\"),\n",
+    "    0.5 * np.ones((20, 30)),\n",
+    "    {\"units\": \"degrees_east\"},\n",
+    ")\n",
+    "pop.coords[\"ULAT\"] = (\n",
+    "    (\"nlat\", \"nlon\"),\n",
+    "    2.5 * np.ones((20, 30)),\n",
+    "    {\"units\": \"degrees_north\"},\n",
+    ")\n",
     "\n",
     "pop[\"UVEL\"] = (\n",
     "    (\"nlat\", \"nlon\"),\n",
@@ -80,7 +97,10 @@
     "pop[\"TEMP\"] = (\n",
     "    (\"nlat\", \"nlon\"),\n",
     "    np.ones((20, 30)) * 15,\n",
-    "    {\"coordinates\": \"TLONG TLAT\", \"standard_name\": \"sea_water_potential_temperature\"},\n",
+    "    {\n",
+    "        \"coordinates\": \"TLONG TLAT\",\n",
+    "        \"standard_name\": \"sea_water_potential_temperature\",\n",
+    "    },\n",
     ")\n",
     "pop"
    ]
@@ -89,7 +109,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This synthetic dataset has multiple `X` and `Y` coords. An example would be model output on a staggered grid."
+    "This synthetic dataset has multiple `X` and `Y` coords. An example would be\n",
+    "model output on a staggered grid.\n"
    ]
   },
   {
@@ -143,7 +164,10 @@
     "    dict(standard_name=\"specific_humidity standard_error\", units=\"g/g\"),\n",
     ")\n",
     "anc[\"q_detection_limit\"] = xr.DataArray(\n",
-    "    1e-3, attrs=dict(standard_name=\"specific_humidity detection_minimum\", units=\"g/g\"),\n",
+    "    1e-3,\n",
+    "    attrs=dict(\n",
+    "        standard_name=\"specific_humidity detection_minimum\", units=\"g/g\"\n",
+    "    ),\n",
     ")\n",
     "anc"
    ]
@@ -152,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What attributes have been discovered?"
+    "## What attributes have been discovered?\n"
    ]
   },
   {
@@ -173,9 +197,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`ds.lon` has attributes `axis: X`. This means that `cf_xarray` can identify the `'X'` axis as being represented by the `lon` variable.\n",
+    "`ds.lon` has attributes `axis: X`. This means that `cf_xarray` can identify the\n",
+    "`'X'` axis as being represented by the `lon` variable.\n",
     "\n",
-    "It can also use the `standard_name` and `units` attributes to infer that `lon` is \"Longitude\". To see variable names that `cf_xarray` can infer, use `.cf.describe()`"
+    "It can also use the `standard_name` and `units` attributes to infer that `lon`\n",
+    "is \"Longitude\". To see variable names that `cf_xarray` can infer, use\n",
+    "`.cf.describe()`\n"
    ]
   },
   {
@@ -196,7 +223,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For `pop`, only `latitude` and `longitude` are detected, not `X` or `Y`. Please comment here: https://github.com/xarray-contrib/cf-xarray/issues/23 if you have opinions about this behaviour."
+    "For `pop`, only `latitude` and `longitude` are detected, not `X` or `Y`. Please\n",
+    "comment here: https://github.com/xarray-contrib/cf-xarray/issues/23 if you have\n",
+    "opinions about this behaviour.\n"
    ]
   },
   {
@@ -217,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For `multiple`, multiple `X` and `Y` coordinates are detected"
+    "For `multiple`, multiple `X` and `Y` coordinates are detected\n"
    ]
   },
   {
@@ -240,7 +269,8 @@
    "source": [
     "## Feature: Accessing coordinate variables\n",
     "\n",
-    "`.cf` implements `__getitem__` to allow easy access to coordinate and axis variables."
+    "`.cf` implements `__getitem__` to allow easy access to coordinate and axis\n",
+    "variables.\n"
    ]
   },
   {
@@ -291,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Dataset.cf[...]` returns a `Dataset`, possibly with multiple variables"
+    "`Dataset.cf[...]` returns a `Dataset`, possibly with multiple variables\n"
    ]
   },
   {
@@ -313,7 +343,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Dataset.cf[...]` returns a single `DataArray`, parsing the `coordinates` attribute if present, so we correctly get the `TLONG` variable and not the `ULONG` variable"
+    "`Dataset.cf[...]` returns a single `DataArray`, parsing the `coordinates`\n",
+    "attribute if present, so we correctly get the `TLONG` variable and not the\n",
+    "`ULONG` variable\n"
    ]
   },
   {
@@ -335,7 +367,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Dataset.cf[...]` also interprets the `ancillary_variables` attribute. The ancillary variables are returned as coordinates of a DataArray"
+    "`Dataset.cf[...]` also interprets the `ancillary_variables` attribute. The\n",
+    "ancillary variables are returned as coordinates of a DataArray\n"
    ]
   },
   {
@@ -356,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature: Accessing variables by standard names"
+    "## Feature: Accessing variables by standard names\n"
    ]
   },
   {
@@ -393,8 +426,7 @@
    "source": [
     "## Feature: Utility functions\n",
     "\n",
-    "\n",
-    "There are some utility functions to allow use by downstream libraries"
+    "There are some utility functions to allow use by downstream libraries\n"
    ]
   },
   {
@@ -417,7 +449,8 @@
    "source": [
     "## Feature: Rewriting property dictionaries\n",
     "\n",
-    "`cf_xarray` will rewrite the `.sizes` and `.chunks` dictionaries so that one can index by a special CF axis or coordinate name"
+    "`cf_xarray` will rewrite the `.sizes` and `.chunks` dictionaries so that one can\n",
+    "index by a special CF axis or coordinate name\n"
    ]
   },
   {
@@ -438,7 +471,7 @@
     "1. One for `X`, `Y`, `T`\n",
     "2. and one for `longitude`, `latitude` and `time`.\n",
     "\n",
-    "An error is raised if there are multiple `'X'` variables (for example)"
+    "An error is raised if there are multiple `'X'` variables (for example)\n"
    ]
   },
   {
@@ -469,16 +502,19 @@
    "source": [
     "## Feature: Rewriting arguments\n",
     "\n",
-    "`cf_xarray` can rewrite arguments for a large number of xarray functions. By this I mean that instead of specifing say `dim=\"lon\"`, you can pass `dim=\"X\"` or `dim=\"longitude\"` and `cf_xarray` will rewrite that to `dim=\"lon\"` based on the attributes present in the dataset. \n",
+    "`cf_xarray` can rewrite arguments for a large number of xarray functions. By\n",
+    "this I mean that instead of specifing say `dim=\"lon\"`, you can pass `dim=\"X\"` or\n",
+    "`dim=\"longitude\"` and `cf_xarray` will rewrite that to `dim=\"lon\"` based on the\n",
+    "attributes present in the dataset.\n",
     "\n",
-    "Here are a few examples"
+    "Here are a few examples\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Slicing"
+    "### Slicing\n"
    ]
   },
   {
@@ -499,7 +535,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Slicing works will expand a single key like `X` to multiple dimensions if those dimensions are tagged with `axis: X`"
+    "Slicing works will expand a single key like `X` to multiple dimensions if those\n",
+    "dimensions are tagged with `axis: X`\n"
    ]
   },
   {
@@ -520,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reductions"
+    "### Reductions\n"
    ]
   },
   {
@@ -541,7 +578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Expanding to multiple dimensions is also supported"
+    "Expanding to multiple dimensions is also supported\n"
    ]
   },
   {
@@ -563,7 +600,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plotting"
+    "### Plotting\n"
    ]
   },
   {
@@ -598,7 +635,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`cf_xarray` can facet"
+    "`cf_xarray` can facet\n"
    ]
   },
   {
@@ -619,7 +656,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Resample & groupby"
+    "### Resample & groupby\n"
    ]
   },
   {
@@ -654,7 +691,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rolling & coarsen "
+    "### Rolling & coarsen\n"
    ]
   },
   {
@@ -680,16 +717,17 @@
     }
    },
    "source": [
-    "``coarsen`` works but everything later will break because of xarray bug https://github.com/pydata/xarray/issues/4120\n",
+    "`coarsen` works but everything later will break because of xarray bug\n",
+    "https://github.com/pydata/xarray/issues/4120\n",
     "\n",
-    "``ds.isel(lon=slice(50)).cf.coarsen(Y=5, X=10).mean()``"
+    "`ds.isel(lon=slice(50)).cf.coarsen(Y=5, X=10).mean()`\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature: mix \"special names\" and variable names"
+    "## Feature: mix \"special names\" and variable names\n"
    ]
   },
   {
@@ -712,7 +750,8 @@
    "source": [
     "## Feature: Weight by Cell Measures\n",
     "\n",
-    "`cf_xarray` can weight by cell measure variables `\"area\"` and `\"volume\"` if the appropriate attribute is set"
+    "`cf_xarray` can weight by cell measure variables `\"area\"` and `\"volume\"` if the\n",
+    "appropriate attribute is set\n"
    ]
   },
   {
