--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -500,6 +500,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Feature: Renaming coordinate variables\n",
+    "\n",
+    "`cf_xarray` lets you rewrite coordinate variables in one dataset to like\n",
+    "variables in another dataset. This can only be done when a one-to-one mapping is\n",
+    "possible\n",
+    "\n",
+    "In this example, `TLONG` and `TLAT` are renamed to `lon` and `lat` i.e. their\n",
+    "counterparts in `ds`. Note the the `coordinates` attribute is appropriately\n",
+    "changed.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pop.cf[\"TEMP\"].cf.rename_like(ds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Feature: Rewriting arguments\n",
     "\n",
     "`cf_xarray` can rewrite arguments for a large number of xarray functions. By\n",
