--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -14,8 +14,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:30.534525Z",
-     "start_time": "2020-06-30T23:25:29.588662Z"
+     "end_time": "2020-07-24T20:12:00.609657Z",
+     "start_time": "2020-07-24T20:11:59.698753Z"
     }
    },
    "outputs": [],
@@ -37,8 +37,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:30.589498Z",
-     "start_time": "2020-06-30T23:25:30.536512Z"
+     "end_time": "2020-07-24T20:12:00.805176Z",
+     "start_time": "2020-07-24T20:12:00.718615Z"
     }
    },
    "outputs": [],
@@ -61,8 +61,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:30.651949Z",
-     "start_time": "2020-06-30T23:25:30.591221Z"
+     "end_time": "2020-07-24T20:12:02.140074Z",
+     "start_time": "2020-07-24T20:12:02.050083Z"
     }
    },
    "outputs": [],
@@ -434,13 +434,34 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:31.205009Z",
-     "start_time": "2020-06-30T23:25:31.186385Z"
+     "end_time": "2020-07-24T20:12:06.956464Z",
+     "start_time": "2020-07-24T20:12:06.908943Z"
     }
    },
    "outputs": [],
    "source": [
     "pop.cf.get_valid_keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can test for presence of these keys\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-24T20:12:36.699151Z",
+     "start_time": "2020-07-24T20:12:36.664209Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\"sea_water_x_velocity\" in pop.cf"
    ]
   },
   {
