Update example notebook

--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -14,8 +14,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-24T20:12:00.609657Z",
-     "start_time": "2020-07-24T20:11:59.698753Z"
+     "end_time": "2020-07-27T23:20:40.515653Z",
+     "start_time": "2020-07-27T23:20:39.578412Z"
     }
    },
    "outputs": [],
@@ -37,8 +37,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-24T20:12:00.805176Z",
-     "start_time": "2020-07-24T20:12:00.718615Z"
+     "end_time": "2020-07-27T23:20:41.803595Z",
+     "start_time": "2020-07-27T23:20:41.713269Z"
     }
    },
    "outputs": [],
@@ -719,17 +719,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`cf_xarray` also understands the \"datetime accessor\" syntax for groupby\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:33.106698Z",
-     "start_time": "2020-06-30T23:25:33.037746Z"
+     "end_time": "2020-07-27T23:21:24.092199Z",
+     "start_time": "2020-07-27T23:21:24.025943Z"
     }
    },
    "outputs": [],
    "source": [
-    "ds.cf.groupby(\"time.month\").mean(\"longitude\")"
+    "ds.cf.groupby(\"T.month\").mean(\"longitude\")"
    ]
   },
   {
@@ -780,13 +787,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:33.212324Z",
-     "start_time": "2020-06-30T23:25:33.164373Z"
+     "end_time": "2020-07-27T23:20:59.326974Z",
+     "start_time": "2020-07-27T23:20:59.261728Z"
     }
    },
    "outputs": [],
    "source": [
-    "ds.cf.groupby(\"time.month\").mean([\"lat\", \"X\"])"
+    "ds.cf.groupby(\"T.month\").mean([\"lat\", \"X\"])"
    ]
   },
   {
@@ -853,7 +860,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.8"
   },
   "toc": {
    "base_numbering": 1,
