--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -14,8 +14,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T23:20:40.515653Z",
-     "start_time": "2020-07-27T23:20:39.578412Z"
+     "end_time": "2020-07-28T03:18:03.264499Z",
+     "start_time": "2020-07-28T03:18:01.706628Z"
     }
    },
    "outputs": [],
@@ -37,8 +37,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T23:20:41.803595Z",
-     "start_time": "2020-07-27T23:20:41.713269Z"
+     "end_time": "2020-07-28T03:18:03.355688Z",
+     "start_time": "2020-07-28T03:18:03.266006Z"
     }
    },
    "outputs": [],
@@ -61,8 +61,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-24T20:12:02.140074Z",
-     "start_time": "2020-07-24T20:12:02.050083Z"
+     "end_time": "2020-07-28T03:18:03.418465Z",
+     "start_time": "2020-07-28T03:18:03.357132Z"
     }
    },
    "outputs": [],
@@ -118,8 +118,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:30.702175Z",
-     "start_time": "2020-06-30T23:25:30.653445Z"
+     "end_time": "2020-07-28T03:18:03.468916Z",
+     "start_time": "2020-07-28T03:18:03.420053Z"
     }
    },
    "outputs": [],
@@ -140,8 +140,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:30.738840Z",
-     "start_time": "2020-06-30T23:25:30.703397Z"
+     "end_time": "2020-07-28T03:18:03.496952Z",
+     "start_time": "2020-07-28T03:18:03.470068Z"
     }
    },
    "outputs": [],
@@ -184,8 +184,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:30.765720Z",
-     "start_time": "2020-06-30T23:25:30.740611Z"
+     "end_time": "2020-07-28T03:18:03.528010Z",
+     "start_time": "2020-07-28T03:18:03.498427Z"
     }
    },
    "outputs": [],
@@ -210,8 +210,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:30.784623Z",
-     "start_time": "2020-06-30T23:25:30.766855Z"
+     "end_time": "2020-07-28T03:18:03.546588Z",
+     "start_time": "2020-07-28T03:18:03.529734Z"
     }
    },
    "outputs": [],
@@ -233,8 +233,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:30.808990Z",
-     "start_time": "2020-06-30T23:25:30.786547Z"
+     "end_time": "2020-07-28T03:18:03.565233Z",
+     "start_time": "2020-07-28T03:18:03.547756Z"
     }
    },
    "outputs": [],
@@ -254,8 +254,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:30.831925Z",
-     "start_time": "2020-06-30T23:25:30.811491Z"
+     "end_time": "2020-07-28T03:18:03.595027Z",
+     "start_time": "2020-07-28T03:18:03.566478Z"
     }
    },
    "outputs": [],
@@ -278,8 +278,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:30.853404Z",
-     "start_time": "2020-06-30T23:25:30.833017Z"
+     "end_time": "2020-07-28T03:26:55.667604Z",
+     "start_time": "2020-07-28T03:26:55.475896Z"
     }
    },
    "outputs": [],
@@ -288,18 +288,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:30.874348Z",
-     "start_time": "2020-06-30T23:25:30.854712Z"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Dataset always return Datasets since there can be multiple x variables\n",
-    "ds.cf[\"X\"]"
+    "Indexing with a scalar key raises an error if the key maps to multiple variables\n",
+    "names\n"
    ]
   },
   {
@@ -307,10 +300,12 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:30.908034Z",
-     "start_time": "2020-06-30T23:25:30.875711Z"
+     "end_time": "2020-07-28T03:27:00.228638Z",
+     "start_time": "2020-07-28T03:27:00.209975Z"
     },
-    "scrolled": true
+    "tags": [
+     "raises-exception"
+    ]
    },
    "outputs": [],
    "source": [
@@ -318,10 +313,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-28T03:28:23.253247Z",
+     "start_time": "2020-07-28T03:28:23.213761Z"
+    },
+    "tags": [
+     "raises-exception"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "pop.cf[\"longitude\"]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Dataset.cf[...]` returns a `Dataset`, possibly with multiple variables\n"
+    "To get back all variables associated with that key, pass a single element list\n",
+    "instead.\n"
    ]
   },
   {
@@ -329,13 +342,47 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:30.938350Z",
-     "start_time": "2020-06-30T23:25:30.909227Z"
+     "end_time": "2020-07-28T03:28:31.727351Z",
+     "start_time": "2020-07-28T03:28:31.676094Z"
     }
    },
    "outputs": [],
    "source": [
-    "# DataArrays return DataArrays\n",
+    "multiple.cf[[\"X\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-28T03:28:35.927895Z",
+     "start_time": "2020-07-28T03:28:35.867609Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pop.cf[[\"longitude\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DataArrays return DataArrays\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-28T03:28:50.626127Z",
+     "start_time": "2020-07-28T03:28:50.526332Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "pop.UVEL.cf[\"longitude\"]"
    ]
   },
@@ -353,8 +400,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:30.999763Z",
-     "start_time": "2020-06-30T23:25:30.939502Z"
+     "end_time": "2020-07-28T03:28:08.240638Z",
+     "start_time": "2020-07-28T03:28:08.170572Z"
     },
     "scrolled": true
    },
@@ -376,9 +423,10 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:31.050027Z",
-     "start_time": "2020-06-30T23:25:31.000741Z"
-    }
+     "end_time": "2020-07-28T03:28:09.922569Z",
+     "start_time": "2020-07-28T03:28:09.866452Z"
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -397,8 +445,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:31.150885Z",
-     "start_time": "2020-06-30T23:25:31.052008Z"
+     "end_time": "2020-07-28T03:18:03.776855Z",
+     "start_time": "2020-07-28T03:18:01.700Z"
     }
    },
    "outputs": [],
@@ -411,8 +459,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:31.185257Z",
-     "start_time": "2020-06-30T23:25:31.152549Z"
+     "end_time": "2020-07-28T03:18:03.777981Z",
+     "start_time": "2020-07-28T03:18:01.700Z"
     }
    },
    "outputs": [],
@@ -434,8 +482,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-24T20:12:06.956464Z",
-     "start_time": "2020-07-24T20:12:06.908943Z"
+     "end_time": "2020-07-28T03:18:03.779098Z",
+     "start_time": "2020-07-28T03:18:01.700Z"
     }
    },
    "outputs": [],
@@ -455,8 +503,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-24T20:12:36.699151Z",
-     "start_time": "2020-07-24T20:12:36.664209Z"
+     "end_time": "2020-07-28T03:18:03.780223Z",
+     "start_time": "2020-07-28T03:18:01.800Z"
     }
    },
    "outputs": [],
@@ -477,7 +525,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-28T03:18:03.781216Z",
+     "start_time": "2020-07-28T03:18:01.800Z"
+    }
+   },
    "outputs": [],
    "source": [
     "ds.cf.sizes"
@@ -499,6 +552,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-28T03:18:03.782014Z",
+     "start_time": "2020-07-28T03:18:01.800Z"
+    },
     "tags": [
      "raises-exception"
     ]
@@ -511,7 +568,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-28T03:18:03.782723Z",
+     "start_time": "2020-07-28T03:18:01.800Z"
+    }
+   },
    "outputs": [],
    "source": [
     "multiple.v1.cf.sizes"
@@ -535,7 +597,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-28T03:18:03.783410Z",
+     "start_time": "2020-07-28T03:18:01.800Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pop.cf[\"TEMP\"].cf.rename_like(ds)"
@@ -567,8 +634,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:31.241228Z",
-     "start_time": "2020-06-30T23:25:31.206075Z"
+     "end_time": "2020-07-28T03:18:03.783972Z",
+     "start_time": "2020-07-28T03:18:01.800Z"
     }
    },
    "outputs": [],
@@ -589,8 +656,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:31.263144Z",
-     "start_time": "2020-06-30T23:25:31.242411Z"
+     "end_time": "2020-07-28T03:18:03.784592Z",
+     "start_time": "2020-07-28T03:18:01.800Z"
     }
    },
    "outputs": [],
@@ -610,8 +677,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:31.316816Z",
-     "start_time": "2020-06-30T23:25:31.264832Z"
+     "end_time": "2020-07-28T03:18:03.785151Z",
+     "start_time": "2020-07-28T03:18:01.800Z"
     }
    },
    "outputs": [],
@@ -631,8 +698,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:31.355791Z",
-     "start_time": "2020-06-30T23:25:31.318494Z"
+     "end_time": "2020-07-28T03:18:03.785772Z",
+     "start_time": "2020-07-28T03:18:01.800Z"
     }
    },
    "outputs": [],
@@ -653,8 +720,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:31.773401Z",
-     "start_time": "2020-06-30T23:25:31.356780Z"
+     "end_time": "2020-07-28T03:18:03.786551Z",
+     "start_time": "2020-07-28T03:18:01.800Z"
     }
    },
    "outputs": [],
@@ -667,8 +734,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:31.950102Z",
-     "start_time": "2020-06-30T23:25:31.774927Z"
+     "end_time": "2020-07-28T03:18:03.787186Z",
+     "start_time": "2020-07-28T03:18:01.800Z"
     }
    },
    "outputs": [],
@@ -688,8 +755,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:32.429977Z",
-     "start_time": "2020-06-30T23:25:31.951116Z"
+     "end_time": "2020-07-28T03:18:03.787907Z",
+     "start_time": "2020-07-28T03:18:01.800Z"
     }
    },
    "outputs": [],
@@ -709,8 +776,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:33.035768Z",
-     "start_time": "2020-06-30T23:25:32.432049Z"
+     "end_time": "2020-07-28T03:18:03.788564Z",
+     "start_time": "2020-07-28T03:18:01.800Z"
     }
    },
    "outputs": [],
@@ -730,8 +797,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T23:21:24.092199Z",
-     "start_time": "2020-07-27T23:21:24.025943Z"
+     "end_time": "2020-07-28T03:18:03.789223Z",
+     "start_time": "2020-07-28T03:18:01.900Z"
     }
    },
    "outputs": [],
@@ -751,8 +818,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:33.163025Z",
-     "start_time": "2020-06-30T23:25:33.108117Z"
+     "end_time": "2020-07-28T03:18:03.789803Z",
+     "start_time": "2020-07-28T03:18:01.900Z"
     }
    },
    "outputs": [],
@@ -787,8 +854,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T23:20:59.326974Z",
-     "start_time": "2020-07-27T23:20:59.261728Z"
+     "end_time": "2020-07-28T03:18:03.790416Z",
+     "start_time": "2020-07-28T03:18:01.900Z"
     }
    },
    "outputs": [],
@@ -811,8 +878,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:33.230790Z",
-     "start_time": "2020-06-30T23:25:33.213660Z"
+     "end_time": "2020-07-28T03:18:03.791021Z",
+     "start_time": "2020-07-28T03:18:01.900Z"
     }
    },
    "outputs": [],
@@ -833,8 +900,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-30T23:25:33.411012Z",
-     "start_time": "2020-06-30T23:25:33.232194Z"
+     "end_time": "2020-07-28T03:18:03.791751Z",
+     "start_time": "2020-07-28T03:18:01.900Z"
     }
    },
    "outputs": [],
