Use text repr in example notebook.
Work around #57

--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -22,7 +22,9 @@
    "source": [
     "import cf_xarray\n",
     "import numpy as np\n",
-    "import xarray as xr"
+    "import xarray as xr\n",
+    "\n",
+    "xr.set_options(display_style=\"text\")  # work around issue 57"
    ]
   },
   {
