--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -22,7 +22,9 @@
    "source": [
     "import cf_xarray\n",
     "import numpy as np\n",
-    "import xarray as xr"
+    "import xarray as xr\n",
+    "\n",
+    "xr.set_options(display_style=\"text\")  # work around issue 57"
    ]
   },
   {
@@ -761,7 +763,12 @@
    },
    "outputs": [],
    "source": [
-    "ds.air.isel(time=slice(4)).cf.plot(x=\"longitude\", y=\"latitude\", col=\"time\")"
+    "seasonal = (\n",
+    "    ds.air.groupby(\"time.season\")\n",
+    "    .mean()\n",
+    "    .reindex(season=[\"DJF\", \"MAM\", \"JJA\", \"SON\"])\n",
+    ")\n",
+    "seasonal.cf.plot(x=\"longitude\", y=\"latitude\", col=\"season\")"
    ]
   },
   {
@@ -941,6 +948,13 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
