Search through dimension names when coordinates attribute is present
See #82

--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -55,7 +55,8 @@
    "metadata": {},
    "source": [
     "This one is inspired by POP model output and illustrates how the coordinates\n",
-    "attribute is interpreted\n"
+    "attribute is interpreted. It also illustrates one way of tagging curvilinear\n",
+    "grids for convenient use of `cf_xarray`\n"
    ]
   },
   {
@@ -70,6 +71,8 @@
    "outputs": [],
    "source": [
     "pop = xr.Dataset()\n",
+    "\n",
+    "# set 2D coordinate variables as latitude, longitude\n",
     "pop.coords[\"TLONG\"] = (\n",
     "    (\"nlat\", \"nlon\"),\n",
     "    np.ones((20, 30)),\n",
@@ -91,6 +94,11 @@
     "    {\"units\": \"degrees_north\"},\n",
     ")\n",
     "\n",
+    "# set dimensions as X, Y\n",
+    "pop[\"nlon\"] = (\"nlon\", np.arange(pop.sizes[\"nlon\"]), {\"axis\": \"X\"})\n",
+    "pop[\"nlat\"] = (\"nlat\", np.arange(pop.sizes[\"nlat\"]), {\"axis\": \"Y\"})\n",
+    "\n",
+    "# actual data vriables with coordinates attribute set\n",
     "pop[\"UVEL\"] = (\n",
     "    (\"nlat\", \"nlon\"),\n",
     "    np.ones((20, 30)) * 15,\n",
