--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -498,7 +498,7 @@
    },
    "outputs": [],
    "source": [
-    "pop.cf.get_valid_keys()"
+    "pop.cf.keys()"
    ]
   },
   {
@@ -520,6 +520,39 @@
    "outputs": [],
    "source": [
     "\"sea_water_x_velocity\" in pop.cf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also get out the available Axis names\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pop.cf.axes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or available Coordinate names. Same for cell measures (`.cf.cell_measures`) and\n",
+    "standard names (`.cf.standard_names`).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pop.cf.coordinates"
    ]
   },
   {
@@ -942,7 +975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
