Apply suggestions from code review

--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -957,6 +957,52 @@
     "ds.air.cf.weighted(\"area\").mean([\"latitude\", \"time\"]).cf.plot(x=\"longitude\")\n",
     "ds.air.mean([\"lat\", \"time\"]).cf.plot(x=\"longitude\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature: Cell boundaries and corners\n",
+    "\n",
+    "`cf_xarray` can infer cell boundaries (for rectilinear grids) and convert\n",
+    "CF-standard bounds variables to corners.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_bnds = ds.cf.add_bounds([\"lat\", \"lon\"])\n",
+    "ds_bnds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can convert each bounds variable independently with the helper:\n",
+    "import cf_xarray as cfxr\n",
+    "\n",
+    "lat_bounds = ds_bnds.cf.get_bounds(\"latitude\")\n",
+    "\n",
+    "lat_corners = cfxr.bounds_to_corners(lat_bounds, bounds_dim=\"bounds\")\n",
+    "lat_corners"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Or we can convert _all_ bounds variables on a dataset\n",
+    "ds_crns = ds_bnds.cf.bounds_to_corners()\n",
+    "ds_crns"
+   ]
   }
  ],
  "metadata": {
@@ -975,7 +1021,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   },
   "toc": {
    "base_numbering": 1,
