--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -559,6 +559,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-info\">\n",
+    "\n",
+    "**Note:** Although it is possible to assign additional coordinates and cell measures, `.cf.coordinates` and `.cf.cell_measures` only return a subset of `(\"longitude\", \"latitude\", \"vertical\", \"time\")` and `(\"area\", \"volume\")`, respectively.\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Feature: Rewriting property dictionaries\n",
     "\n",
     "`cf_xarray` will rewrite the `.sizes` and `.chunks` dictionaries so that one can\n",
@@ -1021,7 +1032,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
