--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -559,11 +559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\">\n",
-    "\n",
-    "**Note:** Although it is possible to assign additional coordinates and cell measures, `.cf.coordinates` and `.cf.cell_measures` only return a subset of `(\"longitude\", \"latitude\", \"vertical\", \"time\")` and `(\"area\", \"volume\")`, respectively.\n",
-    "\n",
-    "</div>"
+    "**Note:** Although it is possible to assign additional coordinates and cell measures, `.cf.coordinates` and `.cf.cell_measures` only return a subset of `(\"longitude\", \"latitude\", \"vertical\", \"time\")` and `(\"area\", \"volume\")`, respectively."
    ]
   },
   {
