manually lint notebook

--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -559,7 +559,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note:** Although it is possible to assign additional coordinates and cell measures, `.cf.coordinates` and `.cf.cell_measures` only return a subset of `(\"longitude\", \"latitude\", \"vertical\", \"time\")` and `(\"area\", \"volume\")`, respectively."
+    "**Note:** Although it is possible to assign additional coordinates and cell\n",
+    "measures, `.cf.coordinates` and `.cf.cell_measures` only return a subset of\n",
+    "`(\"longitude\", \"latitude\", \"vertical\", \"time\")` and `(\"area\", \"volume\")`,\n",
+    "respectively.\n"
    ]
   },
   {
