Allow any cell measure (#115)
* allow extra cell measures

* update docs

* no fancy note

* manually lint notebook

* break tests

* comment valid keys check

* do not pass through _get_measure

* restore original _get_measure docstring

--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -559,6 +559,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Note:** Although it is possible to assign additional coordinates and cell\n",
+    "measures, `.cf.coordinates` and `.cf.cell_measures` only return a subset of\n",
+    "`(\"longitude\", \"latitude\", \"vertical\", \"time\")` and `(\"area\", \"volume\")`,\n",
+    "respectively.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Feature: Rewriting property dictionaries\n",
     "\n",
     "`cf_xarray` will rewrite the `.sizes` and `.chunks` dictionaries so that one can\n",
@@ -1021,7 +1031,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
