new cell measures implementation

--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -559,10 +559,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note:** Although it is possible to assign additional coordinates and cell\n",
-    "measures, `.cf.coordinates` and `.cf.cell_measures` only return a subset of\n",
-    "`(\"longitude\", \"latitude\", \"vertical\", \"time\")` and `(\"area\", \"volume\")`,\n",
-    "respectively.\n"
+    "**Note:** Although it is possible to assign additional coordinates,\n",
+    "`.cf.coordinates` and only returns a subset of \n",
+    "`(\"longitude\", \"latitude\", \"vertical\", \"time\")`.\n"
    ]
   },
   {
@@ -927,7 +926,7 @@
    "source": [
     "## Feature: Weight by Cell Measures\n",
     "\n",
-    "`cf_xarray` can weight by cell measure variables `\"area\"` and `\"volume\"` if the\n",
+    "`cf_xarray` can weight by cell measure variables if the\n",
     "appropriate attribute is set\n"
    ]
   },
