notebook typo and linting

--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -560,7 +560,7 @@
    "metadata": {},
    "source": [
     "**Note:** Although it is possible to assign additional coordinates,\n",
-    "`.cf.coordinates` and only returns a subset of \n",
+    "`.cf.coordinates` only returns a subset of\n",
     "`(\"longitude\", \"latitude\", \"vertical\", \"time\")`.\n"
    ]
   },
@@ -926,8 +926,8 @@
    "source": [
     "## Feature: Weight by Cell Measures\n",
     "\n",
-    "`cf_xarray` can weight by cell measure variables if the\n",
-    "appropriate attribute is set\n"
+    "`cf_xarray` can weight by cell measure variables if the appropriate attribute is\n",
+    "set\n"
    ]
   },
   {
