--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -22,9 +22,7 @@
    "source": [
     "import cf_xarray\n",
     "import numpy as np\n",
-    "import xarray as xr\n",
-    "\n",
-    "xr.set_options(display_style=\"text\")  # work around issue 57"
+    "import xarray as xr"
    ]
   },
   {
@@ -1030,7 +1028,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   },
   "toc": {
    "base_numbering": 1,
