--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -184,7 +184,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What attributes have been discovered?\n"
+    "## What attributes have been discovered?\n",
+    "\n",
+    "The criteria for identifying variables using CF attributes are listed\n",
+    "[here](../criteria.rst).\n"
    ]
   },
   {
@@ -1028,7 +1031,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
