--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -20,7 +20,7 @@
    },
    "outputs": [],
    "source": [
-    "import cf_xarray\n",
+    "import cf_xarray as cfxr\n",
     "import numpy as np\n",
     "import xarray as xr"
    ]
@@ -68,48 +68,8 @@
    },
    "outputs": [],
    "source": [
-    "pop = xr.Dataset()\n",
+    "from cf_xarray.tests.datasets import popds as pop\n",
     "\n",
-    "# set 2D coordinate variables as latitude, longitude\n",
-    "pop.coords[\"TLONG\"] = (\n",
-    "    (\"nlat\", \"nlon\"),\n",
-    "    np.ones((20, 30)),\n",
-    "    {\"units\": \"degrees_east\"},\n",
-    ")\n",
-    "pop.coords[\"TLAT\"] = (\n",
-    "    (\"nlat\", \"nlon\"),\n",
-    "    2 * np.ones((20, 30)),\n",
-    "    {\"units\": \"degrees_north\"},\n",
-    ")\n",
-    "pop.coords[\"ULONG\"] = (\n",
-    "    (\"nlat\", \"nlon\"),\n",
-    "    0.5 * np.ones((20, 30)),\n",
-    "    {\"units\": \"degrees_east\"},\n",
-    ")\n",
-    "pop.coords[\"ULAT\"] = (\n",
-    "    (\"nlat\", \"nlon\"),\n",
-    "    2.5 * np.ones((20, 30)),\n",
-    "    {\"units\": \"degrees_north\"},\n",
-    ")\n",
-    "\n",
-    "# set dimensions as X, Y\n",
-    "pop[\"nlon\"] = (\"nlon\", np.arange(pop.sizes[\"nlon\"]), {\"axis\": \"X\"})\n",
-    "pop[\"nlat\"] = (\"nlat\", np.arange(pop.sizes[\"nlat\"]), {\"axis\": \"Y\"})\n",
-    "\n",
-    "# actual data vriables with coordinates attribute set\n",
-    "pop[\"UVEL\"] = (\n",
-    "    (\"nlat\", \"nlon\"),\n",
-    "    np.ones((20, 30)) * 15,\n",
-    "    {\"coordinates\": \"ULONG ULAT\", \"standard_name\": \"sea_water_x_velocity\"},\n",
-    ")\n",
-    "pop[\"TEMP\"] = (\n",
-    "    (\"nlat\", \"nlon\"),\n",
-    "    np.ones((20, 30)) * 15,\n",
-    "    {\n",
-    "        \"coordinates\": \"TLONG TLAT\",\n",
-    "        \"standard_name\": \"sea_water_potential_temperature\",\n",
-    "    },\n",
-    ")\n",
     "pop"
    ]
   },
@@ -132,15 +92,16 @@
    },
    "outputs": [],
    "source": [
-    "multiple = xr.Dataset()\n",
-    "multiple.coords[\"x1\"] = (\"x1\", range(30), {\"axis\": \"X\"})\n",
-    "multiple.coords[\"y1\"] = (\"y1\", range(20), {\"axis\": \"Y\"})\n",
-    "multiple.coords[\"x2\"] = (\"x2\", range(10), {\"axis\": \"X\"})\n",
-    "multiple.coords[\"y2\"] = (\"y2\", range(5), {\"axis\": \"Y\"})\n",
+    "from cf_xarray.tests.datasets import multiple\n",
     "\n",
-    "multiple[\"v1\"] = ((\"x1\", \"y1\"), np.ones((30, 20)) * 15)\n",
-    "multiple[\"v2\"] = ((\"x2\", \"y2\"), np.ones((10, 5)) * 15)\n",
     "multiple"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This dataset has ancillary variables\n"
    ]
   },
   {
@@ -154,29 +115,8 @@
    },
    "outputs": [],
    "source": [
-    "# This dataset has ancillary variables\n",
+    "from cf_xarray.tests.datasets import anc\n",
     "\n",
-    "anc = xr.Dataset()\n",
-    "anc[\"q\"] = (\n",
-    "    (\"x\", \"y\"),\n",
-    "    np.random.randn(10, 20),\n",
-    "    dict(\n",
-    "        standard_name=\"specific_humidity\",\n",
-    "        units=\"g/g\",\n",
-    "        ancillary_variables=\"q_error_limit q_detection_limit\",\n",
-    "    ),\n",
-    ")\n",
-    "anc[\"q_error_limit\"] = (\n",
-    "    (\"x\", \"y\"),\n",
-    "    np.random.randn(10, 20),\n",
-    "    dict(standard_name=\"specific_humidity standard_error\", units=\"g/g\"),\n",
-    ")\n",
-    "anc[\"q_detection_limit\"] = xr.DataArray(\n",
-    "    1e-3,\n",
-    "    attrs=dict(\n",
-    "        standard_name=\"specific_humidity detection_minimum\", units=\"g/g\"\n",
-    "    ),\n",
-    ")\n",
     "anc"
    ]
   },
@@ -463,6 +403,13 @@
    "outputs": [],
    "source": [
     "pop.cf[[\"sea_water_potential_temperature\", \"UVEL\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that ancillary variables are included as coordinate variables\n"
    ]
   },
   {
@@ -989,14 +936,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also convert each bounds variable independently with the top-level\n",
+    "functions\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can convert each bounds variable independently with the helper:\n",
-    "import cf_xarray as cfxr\n",
-    "\n",
     "lat_bounds = ds_bnds.cf.get_bounds(\"latitude\")\n",
     "\n",
     "lat_vertices = cfxr.bounds_to_vertices(lat_bounds, bounds_dim=\"bounds\")\n",
@@ -1031,7 +983,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   },
   "toc": {
    "base_numbering": 1,
