Minor doc fixes
Fixes #153

--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -68,7 +68,7 @@
    },
    "outputs": [],
    "source": [
-    "from cf_xarray.tests.datasets import popds as pop\n",
+    "from cf_xarray.datasets import popds as pop\n",
     "\n",
     "pop"
    ]
@@ -92,7 +92,7 @@
    },
    "outputs": [],
    "source": [
-    "from cf_xarray.tests.datasets import multiple\n",
+    "from cf_xarray.datasets import multiple\n",
     "\n",
     "multiple"
    ]
@@ -115,7 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "from cf_xarray.tests.datasets import anc\n",
+    "from cf_xarray.datasets import anc\n",
     "\n",
     "anc"
    ]
