--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -213,7 +213,7 @@
     "\n",
     "It can also use the `standard_name` and `units` attributes to infer that `lon`\n",
     "is \"Longitude\". To see variable names that `cf_xarray` can infer, use\n",
-    "`.cf.describe()`\n"
+    "`print(ds.cf)`\n"
    ]
   },
   {
@@ -227,7 +227,7 @@
    },
    "outputs": [],
    "source": [
-    "ds.cf.describe()"
+    "ds.cf"
    ]
   },
   {
@@ -250,7 +250,7 @@
    },
    "outputs": [],
    "source": [
-    "pop.cf.describe()"
+    "pop.cf"
    ]
   },
   {
@@ -271,7 +271,7 @@
    },
    "outputs": [],
    "source": [
-    "multiple.cf.describe()"
+    "multiple.cf"
    ]
   },
   {
