--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -212,8 +212,7 @@
     "`'X'` axis as being represented by the `lon` variable.\n",
     "\n",
     "It can also use the `standard_name` and `units` attributes to infer that `lon`\n",
-    "is \"Longitude\". To see variable names that `cf_xarray` can infer, use\n",
-    "`print(ds.cf)`\n"
+    "is \"Longitude\". To see variable names that `cf_xarray` can infer, use `ds.cf`\n"
    ]
   },
   {
