replace describe with __repr__ (#150)
* show coords std names

* add star

* introduce __repr__

* more compact

* update doc

* whats new

* minor fix

--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -152,8 +152,7 @@
     "`'X'` axis as being represented by the `lon` variable.\n",
     "\n",
     "It can also use the `standard_name` and `units` attributes to infer that `lon`\n",
-    "is \"Longitude\". To see variable names that `cf_xarray` can infer, use\n",
-    "`.cf.describe()`\n"
+    "is \"Longitude\". To see variable names that `cf_xarray` can infer, use `ds.cf`\n"
    ]
   },
   {
@@ -167,7 +166,7 @@
    },
    "outputs": [],
    "source": [
-    "ds.cf.describe()"
+    "ds.cf"
    ]
   },
   {
@@ -190,7 +189,7 @@
    },
    "outputs": [],
    "source": [
-    "pop.cf.describe()"
+    "pop.cf"
    ]
   },
   {
@@ -211,7 +210,7 @@
    },
    "outputs": [],
    "source": [
-    "multiple.cf.describe()"
+    "multiple.cf"
    ]
   },
   {
