--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -585,10 +585,28 @@
     "## Feature: Renaming coordinate variables\n",
     "\n",
     "`cf_xarray` lets you rewrite coordinate variables in one dataset to like\n",
-    "variables in another dataset. This can only be done when a one-to-one mapping is\n",
-    "possible\n",
+    "variables in another dataset.\n",
     "\n",
-    "In this example, `TLONG` and `TLAT` are renamed to `lon` and `lat` i.e. their\n",
+    "In this example, a one-to-one mapping is not possible and the coordinate\n",
+    "variables are not renamed.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "da = pop.cf[\"TEMP\"]\n",
+    "da.cf.rename_like(ds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we drop the `X` and `Y` axes, a one-to-one mapping is possible. In this\n",
+    "example, `TLONG` and `TLAT` are renamed to `lon` and `lat` i.e. their\n",
     "counterparts in `ds`. Note the the `coordinates` attribute is appropriately\n",
     "changed.\n"
    ]
@@ -604,7 +622,8 @@
    },
    "outputs": [],
    "source": [
-    "pop.cf[\"TEMP\"].cf.rename_like(ds)"
+    "da = da.cf.drop_vars([\"X\", \"Y\"])\n",
+    "da.cf.rename_like(ds)"
    ]
   },
   {
