all variables can be renamed

--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -582,10 +582,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature: Renaming coordinate variables\n",
+    "## Feature: Renaming variables\n",
     "\n",
-    "`cf_xarray` lets you rewrite coordinate variables in one dataset to like\n",
-    "variables in another dataset.\n",
+    "`cf_xarray` lets you rewrite variables in one dataset to like variables in\n",
+    "another dataset.\n",
     "\n",
     "In this example, a one-to-one mapping is not possible and the coordinate\n",
     "variables are not renamed.\n"
