add skip to rename_like

--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -605,10 +605,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we drop the `X` and `Y` axes, a one-to-one mapping is possible. In this\n",
-    "example, `TLONG` and `TLAT` are renamed to `lon` and `lat` i.e. their\n",
-    "counterparts in `ds`. Note the the `coordinates` attribute is appropriately\n",
-    "changed.\n"
+    "If we exclude all axes (variables with `axis` attribute), a one-to-one mapping\n",
+    "is possible. In this example, `TLONG` and `TLAT` are renamed to `lon` and `lat`\n",
+    "i.e. their counterparts in `ds`. Note the the `coordinates` attribute is\n",
+    "appropriately changed.\n"
    ]
   },
   {
@@ -622,8 +622,7 @@
    },
    "outputs": [],
    "source": [
-    "da = da.cf.drop_vars([\"X\", \"Y\"])\n",
-    "da.cf.rename_like(ds)"
+    "da.cf.rename_like(ds, skip=\"axes\")"
    ]
   },
   {
