--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -29,6 +29,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "`cf_xarray` works best when `xarray` keeps attributes by default.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xr.set_options(keep_attrs=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Lets read two datasets.\n"
    ]
   },
@@ -914,6 +930,7 @@
     "    * 110e3\n",
     ")\n",
     "# and set proper attributes\n",
+    "ds[\"cell_area\"].attrs = dict(standard_name=\"cell_area\", units=\"m2\")\n",
     "ds.air.attrs[\"cell_measures\"] = \"area: cell_area\""
    ]
   },
@@ -1000,7 +1017,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
