--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -999,6 +999,26 @@
     "ds_crns = ds_bnds.cf.bounds_to_vertices()\n",
     "ds_crns"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature: Add canonical CF attributes\n",
+    "\n",
+    "`cf_xarray` can add missing canonical CF attributes consistent with the official\n",
+    "[CF standard name table](https://cfconventions.org/Data/cf-standard-names/77/build/cf-standard-name-table.html).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_canonical = ds.cf.add_canonical_attributes(verbose=True)\n",
+    "ds_canonical"
+   ]
   }
  ],
  "metadata": {
