--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -1007,7 +1007,7 @@
     "## Feature: Add canonical CF attributes\n",
     "\n",
     "`cf_xarray` can add missing canonical CF attributes consistent with the official\n",
-    "[CF standard name table](https://cfconventions.org/Data/cf-standard-names/77/build/cf-standard-name-table.html).\n"
+    "[CF standard name table](https://cfconventions.org/standard-names.html).\n"
    ]
   },
   {
