try to fix pre-commit

--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -648,9 +648,9 @@
     "## Feature: Rewriting arguments\n",
     "\n",
     "`cf_xarray` can rewrite arguments for a large number of xarray functions. By\n",
-    "this I mean that instead of specifying say `dim=\"lon\"`, you can pass `dim=\"X\"` or\n",
-    "`dim=\"longitude\"` and `cf_xarray` will rewrite that to `dim=\"lon\"` based on the\n",
-    "attributes present in the dataset.\n",
+    "this I mean that instead of specifying say `dim=\"lon\"`, you can pass `dim=\"X\"`\n",
+    "or `dim=\"longitude\"` and `cf_xarray` will rewrite that to `dim=\"lon\"` based on\n",
+    "the attributes present in the dataset.\n",
     "\n",
     "Here are a few examples\n"
    ]
