--- a/doc/examples/introduction.ipynb
+++ b/doc/examples/introduction.ipynb
@@ -22,7 +22,10 @@
    "source": [
     "import cf_xarray as cfxr\n",
     "import numpy as np\n",
-    "import xarray as xr"
+    "import xarray as xr\n",
+    "\n",
+    "# For this notebooks, it's nicer if we don't show the array values by default\n",
+    "xr.set_options(display_expand_data=False)"
    ]
   },
   {
@@ -1023,7 +1026,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1037,7 +1040,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.9"
   },
   "toc": {
    "base_numbering": 1,
